<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_world">Hello World I am Ivan Diaz, idiaz3</string>
    <string name="radio_decimal">Decimal</string>
    <string name="radio_octal">Octal</string>
    <string name="radio_hex">Hex</string>
    <string name="radio_binary">Binary</string>
    <string name="btn_convert">Convert</string>
    <string name="btn_close">Close</string>
</resources>
