<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ivan.lab1.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:id="@+id/textView" />
    <RadioGroup
        android:id="@+id/radioInputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:text="@string/radio_binary"
            android:id="@+id/binaryRadio"
            android:layout_marginTop="70dp"
            android:checked="false"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_octal"
            android:id="@+id/octalRadio"
            android:checked="false"
            android:layout_below="@+id/binaryRadio"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_decimal"
            android:id="@+id/decimalRadio"
            android:layout_below="@+id/octalRadio"
            android:layout_alignParentStart="true"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_hex"
            android:id="@+id/hexRadio"
            android:layout_below="@+id/decimalRadio"
            android:layout_alignParentStart="true"
            android:checked="false" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_convert"
        android:id="@+id/buttonConvert"
        android:layout_below="@+id/radioInputs" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_close"
        android:id="@+id/buttonClose"
        android:layout_alignTop="@+id/buttonConvert"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginStart="30dp" />

    <TableLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"
        android:layout_below="@id/buttonConvert"        android:layout_centerHorizontal="true">
        <TableRow>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="Binary"                android:layout_gravity="left"                android:paddingRight="10dp" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="0" android:id="@+id/binaryValue"                android:layout_gravity="right" />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="Octal"                android:layout_gravity="left"                android:paddingRight="10dp" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="0" android:id="@+id/octalValue"                android:layout_gravity="right" />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="Decimal"                android:layout_gravity="left"                android:paddingRight="10dp" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="0" android:id="@+id/decimalValue"                android:layout_gravity="right" />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="Hex"                android:layout_gravity="left"                android:paddingRight="10dp" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="0" android:id="@+id/hexValue"                android:layout_gravity="right" />
        </TableRow>
    </TableLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_value"
        android:inputType="text"
        android:hint="Enter a number or hex value"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

</RelativeLayout>
